--- a/NBA/src/app/views/partita-page/partita-page.component.html
+++ b/NBA/src/app/views/partita-page/partita-page.component.html
@@ -12,52 +12,53 @@
         <div class="container w-full flex flex-wrap justify-center">
             <div class="lg:w-[75%] w-full rounded-3xl h-[40vh] flex justify-center bg-[#DCF1FF]">
                 <div class="w-1/3 flex flex-wrap justify-center items-center">
-                    <div class="h-1/6 w-full flex justify-center"></div>
-                    <div class="h-1/4 w-full flex justify-center"><img class="hover:cursor-pointer" [routerLink]="['/squadraDetail',matchStats.calendarioDateResponse.teamIdAway]" src={{matchStats.calendarioDateResponse.logoAway}} alt="img"></div>
-                    <div class="h-1/4 w-full flex justify-center items-center">
-                        <p class="font-bold text-center text-2xl hover:underline hover:cursor-pointer" [routerLink]="['/squadraDetail',matchStats.calendarioDateResponse.teamIdAway]">{{matchStats.calendarioDateResponse.teamAwayName}}</p>
+                    <div class="h-1/4 w-full flex justify-center"></div>
+                    <div class="h-1/4 w-full flex justify-center"><img src={{matchStats.calendarioDateResponse.logoAway}} alt="img"></div>
+                    <div class="h-1/4 w-full flex justify-center">
+                        <p class="font-bold text-2xl">{{matchStats.calendarioDateResponse.teamAwayName}}</p>
                     </div>
                     <div class="h-1/4 w-full flex justify-center">
                         <p class="font-bold text-xl">(1-20)</p>
                     </div>
                 </div>
                 <div class="w-1/3 flex flex-wrap justify-center items-center">
-                    <div class="h-1/6 w-full flex justify-center items-center">
-                        <p class="font-bold text-center text-xl">{{matchStats.calendarioDateResponse.gameStartDate}}</p>
+                    <div class="h-1/4 w-full flex justify-center">
+                        <p class="font-bold text-xl">{{matchStats.calendarioDateResponse.gameStartDate}}</p>
                     </div>
-                    <div class="h-1/4 w-full flex justify-center items-center">
-                        <p class="font-bold text-center text-4xl">{{matchStats.calendarioDateResponse.scoreTeamAway}}-{{matchStats.calendarioDateResponse.scoreTeamHome}}</p>
+                    <div class="h-1/4 w-full flex justify-center">
+                        <p class="font-bold text-4xl">{{matchStats.calendarioDateResponse.scoreTeamAway}}-{{matchStats.calendarioDateResponse.scoreTeamHome}}</p>
                     </div>
                     <div class="h-1/4 w-full flex justify-center"></div>
-                    <div class="h-1/4 w-full flex justify-center">
-                        <div class="w-[75%] h-1/3 border-black rounded-full flex flex-nowrap justify-center">
-                            <div class="w-[50%] bg-red-600 rounded-l-full"></div>
-                            <div class="w-[50%] bg-blue-600 rounded-r-full"></div>
-                        </div>
-                    </div>
+                    <div class="h-1/4 w-full flex justify-center">barra</div>
                 </div>
                 <div class="w-1/3 flex flex-wrap justify-center items-center">
-                    <div class="h-1/6 w-full flex justify-center"></div>
-                    <div class="h-1/4 w-full flex justify-center"><img class="hover:cursor-pointer" [routerLink]="['/squadraDetail',matchStats.calendarioDateResponse.teamIdHome]" src={{matchStats.calendarioDateResponse.logoHome}} alt="img"></div>
-                    <div class="h-1/4 w-full flex justify-center items-center">
-                        <p class="font-bold text-center text-2xl hover:underline hover:cursor-pointer" [routerLink]="['/squadraDetail',matchStats.calendarioDateResponse.teamIdHome]">{{matchStats.calendarioDateResponse.teamHomeName}}</p>
+                    <div class="h-1/4 w-full flex justify-center"></div>
+                    <div class="h-1/4 w-full flex justify-center"><img src={{matchStats.calendarioDateResponse.logoHome}} alt="img"></div>
+                    <div class="h-1/4 w-full flex justify-center">
+                        <p class="font-bold text-2xl">{{matchStats.calendarioDateResponse.teamHomeName}}</p>
                     </div>
                     <div class="h-1/4 w-full flex justify-center">
                         <p class="font-bold text-xl">(17-3)</p>
                     </div>
                 </div>
             </div>
-            <div class="lg:w-[75%] w-full flex flex-nowrap justify-between mt-5" *ngFor="let _ of quarti, let i = index">
+            <div class="lg:w-[75%] w-full flex flex-nowrap justify-between mt-5" *ngFor="let i of [0,1,2,3]">
                 <div class="lg:w-[7%] w-[15%] bg-[#DCF1FF] h-12 rounded-3xl flex justify-center items-center">
                     <p class="text-xl">
-                        {{quarti[i]}}°
+                        {{i+1}}°
                     </p>
                 </div>
                 <div class="lg:w-[42%] w-[35%]  bg-[#DCF1FF] h-12 rounded-3xl flex justify-center items-center">
-                    <p class="text-xl">22</p>
+                    <p *ngIf="i==0" class="text-xl">{{matchStats.homeTeam.qaurtiScoreResponse.q1Score}}</p>
+                    <p *ngIf="i==1" class="text-xl">{{matchStats.homeTeam.qaurtiScoreResponse.q2Score}}</p>
+                    <p *ngIf="i==2" class="text-xl">{{matchStats.homeTeam.qaurtiScoreResponse.q3Score}}</p>
+                    <p *ngIf="i==3" class="text-xl">{{matchStats.homeTeam.qaurtiScoreResponse.q4Score}}</p>
                 </div>
                 <div class="lg:w-[42%] w-[35%]  bg-[#DCF1FF] h-12 rounded-3xl flex justify-center items-center">
-                    <p class="text-xl">22</p>
+                    <p *ngIf="i==0" class="text-xl">{{matchStats.homeTeam.qaurtiScoreResponse.q1Score}}</p>
+                    <p *ngIf="i==1" class="text-xl">{{matchStats.homeTeam.qaurtiScoreResponse.q2Score}}</p>
+                    <p *ngIf="i==2" class="text-xl">{{matchStats.homeTeam.qaurtiScoreResponse.q3Score}}</p>
+                    <p *ngIf="i==3" class="text-xl">{{matchStats.homeTeam.qaurtiScoreResponse.q4Score}}</p>
                 </div>
             </div>
         </div>
@@ -66,11 +67,11 @@
     <div class="flex justify-center">
         <div class="container w-full flex flex-wrap justify-center">
             <div class="w-full md:w-auto flex flex-wrap md:flex-nowrap justify-center">
-                <div class="w-full flex flex-wrap justify-center mb-5 lg:m-0">
-                    <button class="h-14 w-[90%] md:w-40 px-4 mx-2 rounded-full bg-[#DCF1FF]" [class.bg-secondary]="tabsSelected=='teamAway'" [class.text-white]="tabsSelected=='teamAway'" (click)="tabsSelected='teamAway'">
-                        {{matchStats.calendarioDateResponse.teamAwayName | uppercase}}
+                <div class="w-full flex flex-wrap justify-center mb-5 md:m-0">
+                    <button class="h-14 w-[90%] md:w-40 px-4 mx-2 rounded-full bg-[#DCF1FF]" [class.bg-secondary]="tabsSelected=='teamHome'" [class.text-white]="tabsSelected=='teamHome'" (click)="tabsSelected='teamHome'">
+                        {{matchStats.calendarioDateResponse.teamAwayName}}
                     </button>
-                    <div class="md:w-[60%] w-[80%] h-1 bg-secondary mt-1" *ngIf="tabsSelected==='teamAway'"></div>
+                    <div class="md:w-[60%] w-[80%] h-1 bg-secondary mt-1" *ngIf="tabsSelected==='teamHome'"></div>
                 </div>
                 <div class="w-full flex flex-wrap justify-center mb-5 lg:m-0">
                     <button class="h-14 w-[90%] md:w-40 px-4 mx-2 rounded-full bg-[#DCF1FF]" [class.bg-secondary]="tabsSelected=='statics'" [class.text-white]="tabsSelected=='statics'" (click)="tabsSelected='statics'">
@@ -79,10 +80,10 @@
                     <div class="md:w-[60%] w-[80%] h-1 bg-secondary mt-1" *ngIf="tabsSelected==='statics'"></div>
                 </div>
                 <div class="w-full flex flex-wrap justify-center mb-5 lg:m-0">
-                    <button class="h-14 w-[90%] md:w-40 px-4 mx-2 rounded-full bg-[#DCF1FF]" [class.bg-secondary]="tabsSelected=='teamHome'" [class.text-white]="tabsSelected=='teamHome'" (click)="tabsSelected='teamHome'">
-                        {{matchStats.calendarioDateResponse.teamHomeName | uppercase}}
+                    <button class="h-14 w-[90%] md:w-40 px-4 mx-2 rounded-full bg-[#DCF1FF]" [class.bg-secondary]="tabsSelected=='teamAway'" [class.text-white]="tabsSelected=='teamAway'" (click)="tabsSelected='teamAway'">
+                        {{matchStats.calendarioDateResponse.teamHomeName}}
                     </button>
-                    <div class="md:w-[60%] w-[80%] h-1 bg-secondary mt-1" *ngIf="tabsSelected==='teamHome'"></div>
+                    <div class="md:w-[60%] w-[80%] h-1 bg-secondary mt-1" *ngIf="tabsSelected==='teamAway'"></div>
                 </div>
             </div>
             <div class="lg:w-[75%] w-full h-full mt-5">
@@ -106,12 +107,12 @@
                             </th>
                         </tr>
                     </thead>
-                    <tbody *ngIf="tabsSelected==='teamHome'">
-                        <tr class="h-10 p-0" *ngFor="let player of matchStats.homeTeam.playersStatistics">
+                    <tbody *ngIf="tabsSelected==='teamAway'">
+                        <tr class="h-10 p-0" *ngFor="let player of matchStats.awayTeam.playersStatistics">
                             <td class="w-[40%] p-0 border-b-4 border-r-4 border-white">
                                 <div class="flex flex-nowrap justify-center w-full">
                                     <div class="w-1/4 flex justify-center items-center bg-[#ACDEFF] border-r-4 border-white h-10">
-                                        <p>23</p>
+                                        <p></p>
                                     </div>
                                     <div class="w-3/4 flex justify-center items-center bg-[#ACDEFF] h-10">
                                         <p>{{player.nome}}</p>
@@ -132,12 +133,12 @@
                             </td>
                         </tr>
                     </tbody>
-                    <tbody *ngIf="tabsSelected==='teamAway'">
-                        <tr class="h-10 p-0" *ngFor="let player of matchStats.awayTeam.playersStatistics">
+                    <tbody *ngIf="tabsSelected==='teamHome'">
+                        <tr class="h-10 p-0" *ngFor="let player of matchStats.homeTeam.playersStatistics">
                             <td class="w-[40%] p-0 border-b-4 border-r-4 border-white">
                                 <div class="flex flex-nowrap justify-center w-full">
                                     <div class="w-1/4 flex justify-center items-center bg-[#ACDEFF] border-r-4 border-white h-10">
-                                        <p>23</p>
+                                        <p></p>
                                     </div>
                                     <div class="w-3/4 flex justify-center items-center bg-[#ACDEFF] h-10">
                                         <p>{{player.nome}}</p>
@@ -163,21 +164,21 @@
                     <thead>
                         <tr class="h-10 border-b-4 border-white">
                             <th class="w-[20%] bg-secondary text-white border-r-4 border-white">
-                                <p>{{matchStats.calendarioDateResponse.codeAway}}</p>
+                                <p>DCV</p>
                             </th>
                             <th class="w-[60%] bg-secondary text-white border-r-4 border-white">
                                 <p>STATISTICHE</p>
                             </th>
                             <th class="w-[20%] bg-secondary text-white">
-                                <p>{{matchStats.calendarioDateResponse.codeHome}}</p>
+                                <p>DCV</p>
                             </th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="h-20 p-0" *ngFor="let _ of staticsToShow">
+                        <tr class="h-20 p-0" *ngFor="let _ of matchStats.homeTeam.datiArray">
                             <td colspan="3" class="w-full p-0 border-b-4 border-white bg-[#ACDEFF]">
                                 <div class="flex flex-col flex-wrap justify-around items-center">
-                                    <p class="w-full text-center text-lg"></p>
+                                    <p class="w-full text-center text-lg">tiri da 3 punti</p>
                                     <div class="w-[80%] flex justify-center items-center flex-nowrap">
                                         <div class="w-[50%] flex justify-end bg-[#DCF1FF] rounded-l-full">
                                             <div [style.width.%]="functionCalculatePercentage(lato1, lato2, true)" class="bg-red-500 rounded-l-full">
