--- a/NBA/src/app/components/login/login.component.html
+++ b/NBA/src/app/components/login/login.component.html
@@ -31,27 +31,51 @@
         <button (click)="registratiView()" class="w-[30%] p-2 bg-primary text-white rounded-2xl hover:bg-blue-600">REGISTRATI</button>
       </div>
   </div>
-  <div class="w-full" *ngIf="registrati === true">
+  <div class="w-full flex flex-wrap justify-center" *ngIf="registrati === true">
     <form class="w-[80%] flex flex-wrap" (submit)="login()" >
       <div class="w-full flex justify-center">
         <div class="w-[80%] flex justify-center">
-          <p class="text-2xl font-bold">ACCEDI AL TUO ACCOUNT</p>
+          <p class="text-2xl font-bold">REGISTRATI</p>
         </div>
       </div>
       <div class="w-full flex justify-center flex-wrap mt-4">
-        <div class="w-[90%] bg-white mb-4">
-          <input type="text" id="username" name="username" [(ngModel)]="utente" class="mt-1 p-2 w-full border rounded-md"
-            placeholder="Username: ">
+        <div class="w-[70%] mb-4">
+          <input type="text" id="username" name="username" maxlength="40" 
+            class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="USERNAME: ">
         </div>
-        <div class="w-[90%] bg-white mb-4">
-          <input type="password" id="password" name="password" [(ngModel)]="password"
-            class="mt-1 p-2 w-full border rounded-md" placeholder="Password: ">
+        <div class="w-[70%] mb-4">
+          <input type="password" id="password" name="password"
+            class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="PASSWORD: ">
+        </div>
+        <div class="w-[70%] flex flex-nowrap mb-4 justify-between">
+          <div class="w-[20%]">
+            <input type="text" id="sesso" name="sesso" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="SESSO:">
+          </div>
+          <div class="w-[80%] flex items-center ml-4">
+            <div class="rounded-full w-5 h-5 bg-gray-400" type="checkbox" ></div>
+          </div>
+        </div>
+        <div class="w-[70%] mb-4">
+          <input type="password" id="password" name="password"
+            class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="PASSWORD: ">
+        </div>
+        <div class="w-[70%] mb-4">
+          <input type="password" id="password" name="password"
+            class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="PASSWORD: ">
+        </div>
+        <div class="w-[70%] mb-4">
+          <input type="password" id="password" name="password"
+            class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="PASSWORD: ">
+        </div>
+        <div class="w-[70%] mb-4">
+          <input type="password" id="password" name="password"
+            class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="PASSWORD: ">
         </div>
       </div>
-      <div class="w-full flex justify-center">
+      <!-- <div class="w-full flex justify-center">
         <button type="submit" (submit)="login()"
-          class="w-auto py-2 px-4 bg-primary text-white rounded-md hover:bg-blue-600">ACCEDI</button>
-      </div>
+          class="w-auto py-2 px-4 bg-primary text-white rounded-2xl hover:bg-blue-600">ACCEDI</button>
+      </div> -->
     </form>
   </div>
 
