--- a/NBA/src/app/components/login/login.component.html
+++ b/NBA/src/app/components/login/login.component.html
@@ -3,7 +3,11 @@
     <form class="w-[80%] flex flex-wrap" (submit)="login()" >
       <div class="w-full flex justify-center">
         <div class="w-[80%] flex justify-center">
-          <p class="text-2xl font-bold">ACCEDI AL TUO ACCOUNT</p>
+            <div class="w-full flex justify-between items-center">
+              <div class="w-[15%] flex justify-center"></div>
+              <p class="w-[70%] flex justify-center text-2xl font-bold">ACCEDI AL TUO ACCOUNT</p>
+              <div class="w-[15%] flex justify-center ">x</div>
+            </div>
         </div>
       </div>
       <div class="w-full flex justify-center flex-wrap mt-4">
@@ -32,51 +36,76 @@
       </div>
   </div>
   <div class="w-full flex flex-wrap justify-center" *ngIf="registrati === true">
-    <form class="w-[80%] flex flex-wrap" (submit)="login()" >
+    <form class="w-[80%] flex flex-wrap">
       <div class="w-full flex justify-center">
         <div class="w-[80%] flex justify-center">
-          <p class="text-2xl font-bold">REGISTRATI</p>
+          <div class="w-full flex justify-between items-center">
+            <div class="w-[15%] flex justify-center " (click)="registratiView()"> < indietro </div>
+            <p class="w-[70%] flex justify-center text-2xl font-bold">REGISTRATI</p>
+            <div class="w-[15%] flex justify-center ">x</div>
+          </div>
         </div>
       </div>
       <div class="w-full flex justify-center flex-wrap mt-4">
         <div class="w-[70%] mb-4">
           <input type="text" id="username" name="username" maxlength="40" 
-            class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="USERNAME: ">
+            class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="Username* ">
         </div>
         <div class="w-[70%] mb-4">
-          <input type="password" id="password" name="password"
-            class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="PASSWORD: ">
+          <input type="text" id="eta" name="eta"
+            class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="Età ">
         </div>
         <div class="w-[70%] flex flex-nowrap mb-4 justify-between">
           <div class="w-[20%]">
-            <input type="text" id="sesso" name="sesso" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="SESSO:">
+            <input type="text" id="sesso" name="sesso" class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="Sesso* ">
           </div>
           <div class="w-[80%] flex items-center ml-4">
-            <div class="rounded-full w-5 h-5 bg-gray-400" type="checkbox" ></div>
+            <div class="w-1/3 flex flex-nowrap">
+              <input type="checkbox" class="rounded-full w-5 h-5 bg-gray-400">
+              <div class="w-[25%] flex justify-center border-primary border-4 ml-2">M</div>
+            </div>
+            <div class="w-1/3 flex flex-nowrap">
+              <input type="checkbox" class="rounded-full w-5 h-5 bg-gray-400">
+              <div class="w-[25%] flex justify-center border-primary border-4 ml-2">F</div>
+            </div>
+            <div class="w-1/3 flex flex-nowrap">
+              <input type="checkbox" class="rounded-full w-5 h-5 bg-gray-400">
+              <div class="w-[25%] flex justify-center border-primary border-4 ml-2">Altro</div>
+            </div>
           </div>
         </div>
         <div class="w-[70%] mb-4">
-          <input type="password" id="password" name="password"
-            class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="PASSWORD: ">
+          <input type="email" id="email" name="email"
+            class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="Eamil* ">
         </div>
         <div class="w-[70%] mb-4">
           <input type="password" id="password" name="password"
-            class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="PASSWORD: ">
+            class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="Cellulare* ">
         </div>
         <div class="w-[70%] mb-4">
           <input type="password" id="password" name="password"
-            class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="PASSWORD: ">
+            class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="Password* ">
         </div>
         <div class="w-[70%] mb-4">
           <input type="password" id="password" name="password"
-            class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="PASSWORD: ">
+            class="mt-1 px-4 py-1 w-full border-primary border-4 rounded-full" placeholder="Ripeti Password* ">
+        </div>
+        <div class="w-[70%] mb-4">
+          <div class="w-full h-24 flex flex-nowrap rounded-[25px] border-4 border-primary justify-start items-center">
+            <input type="checkbox" class="w-[7%] h-[50%] bg-gray-500 ml-4">
+            <div class="text-base">Non sono un Robot</div>
+          </div>
+        </div>
+        <div class="w-full flex justify-center">
+          <button type="submit" 
+          class="w-auto py-2 px-4 bg-primary text-white rounded-2xl hover:bg-blue-600">REGISTRATI</button>
         </div>
       </div>
-      <!-- <div class="w-full flex justify-center">
-        <button type="submit" (submit)="login()"
-          class="w-auto py-2 px-4 bg-primary text-white rounded-2xl hover:bg-blue-600">ACCEDI</button>
-      </div> -->
     </form>
+    <div class="w-[60%] flex justify-evenly items-center mt-10">
+      <p class="text-base text-center font-bold mr-2">Hai già un account?</p>
+      <button (click)="registratiView()" class="w-[30%] p-2 bg-primary text-white rounded-2xl hover:bg-blue-600">ACCEDI</button>
+    </div>
   </div>
 
   <div class="text-center mt-4">
