--- a/NBA/src/app/components/partite-del-giorno-preview/partite-del-giorno-preview.component.html
+++ b/NBA/src/app/components/partite-del-giorno-preview/partite-del-giorno-preview.component.html
@@ -2,7 +2,7 @@
     <div class="">
         <div id="indicators-carousel" class="flex flex-wrap w-full h-full" data-carousel="static">
             <div class="w-full h-full flex flex-nowrap justify-between items-center">
-                <button type="button" (click)="functionCambiaCard(-1)" class="ml-2 lg:m-0 z-30 flex items-center justify-center h-full cursor-pointer group focus:outline-none" data-carousel-prev>
+                <button type="button" (click)="functionCambiaCard(-1)" class="ml-2 lg:m-0 -z-10 flex items-center justify-center h-full cursor-pointer group focus:outline-none" data-carousel-prev>
                     <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-secondary group-hover:bg-primary">
                         <svg class="w-4 h-4 text-white rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4" />
@@ -10,16 +10,16 @@
                     </span>
                 </button>
                 <div class="rounded-lg w-full h-full flex flex-nowrap justify-center">
-                    <div *ngFor="let card of cards; let i=index" [style.order]="calculateOrder(i)" class="w-1/3 m-0 p-0" [ngClass]="{
+                    <div *ngFor="let card of cards; let i=index" [style.order]="calculateOrder(i)" class="lg:w-1/3 m-0 p-0" [ngClass]="{
                                     'hidden w-0': (isMobile && currentIndex===i) || currentIndex !== i && currentIndexAfter !== i && currentIndexBefore !== i,
                                     'w-full': isMobile && currentIndex === i,
                             }" id={{i}}>
-                        <app-card-partita *ngIf="i===currentIndexBefore && isMobile" [gameId]="card" class="w-1/3"></app-card-partita>
+                        <app-card-partita *ngIf="i===currentIndexBefore && isMobile" [gameId]="card" class="lg:w-1/3"></app-card-partita>
                         <app-card-partita *ngIf="!isMobile" [gameId]="card"></app-card-partita>
                     </div>
                 </div>
 
-                <button type="button" (click)="functionCambiaCard(1)" class="mr-2 lg:m-0 z-30 flex items-center justify-center h-full cursor-pointer group focus:outline-none" data-carousel-next>
+                <button type="button" (click)="functionCambiaCard(1)" class="mr-2 lg:m-0 -z-10 flex items-center justify-center h-full cursor-pointer group focus:outline-none" data-carousel-next>
                     <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-secondary group-hover:bg-primary ">
                         <svg class="w-4 h-4 text-white rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4" />
