--- a/NBA/src/app/views/profilo-page/profilo-page.component.html
+++ b/NBA/src/app/views/profilo-page/profilo-page.component.html
@@ -19,9 +19,7 @@
                     <div class="w-full bg-primary box-shadow-for-menu">
                         <ul>
                             <li class="p-5 text-2xl text-white font-bold hover:underline focus:underline" (click)="functionChangeManu('profilo')">Profilo</li>
-                            <li class="p-5 text-2xl text-white font-bold hover:underline focus:underline" (click)="functionChangeManu('risultato')">Risultato Sondaggi</li>
-                            <li class="p-5 text-2xl text-white font-bold hover:underline focus:underline" (click)="functionChangeManu('notifiche')">Notifiche </li>
-                            <li class="p-5 text-2xl text-white font-bold hover:underline focus:underline" (click)="functionChangeManu('amici')">Amici</li>
+                            <li class="p-5 text-2xl text-white font-bold hover:underline focus:underline" (click)="functionChangeManu('risultato')">Risultato Sondaggi</li>                            <li class="p-5 text-2xl text-white font-bold hover:underline focus:underline" (click)="functionChangeManu('amici')">Amici</li>
                             <li class="p-5 text-2xl text-white font-bold hover:underline focus:underline" (click)="functionChangeManu('preferiti')">Preferiti</li>
                             <li class="p-5 text-2xl text-white font-bold hover:underline focus:underline" (click)="functionChangeManu('impostazioni')">Impostazioni</li>
                         </ul>
@@ -60,7 +58,32 @@
                         </h2>
                     </div>
                     <div class="w-full h-6 bg-secondary"></div>
-
+                    <div class="w-full h-full flex lg:justify-between mt-10">
+                        <div class="lg:w-[45%] w-[90%] ">
+                            <div class="bg-secondary rounded-xl flex justify-center">
+                                <div class="w-[90%] h-[90%]">
+                                    <div class="w-full h-20 flex flex-nowrap">
+                                        <div class="w-1/5 flex items-center">
+                                            <div class="w-14 h-14 rounded-full bg-white"></div>
+                                        </div>
+                                        <div class="w-4/5 flex items-center">
+                                            <p class="text-white text-xl">Nome</p>
+                                        </div>
+                                    </div>
+                                    <div class="w-full ">
+                                        <div class="bg-[#ACDEFF] rounded-xl mb-6">
+                                            <p class="p-2">
+                                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt dicta tempore vel! Minima dolore qui quasi facere consectetur quas nisi?
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex justify-end w-full mt-2">
+                                <button class="font-bold hover:underline text-xl">Vai all'articolo</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="" *ngIf="menuSelected==='risultato'">
                     <div class="w-full h-20 bg-primary flex justify-center items-center">
@@ -72,15 +95,6 @@
                     <div class="w-full">
                         <!-- <app-piechart></app-piechart> --> <!-- diagramma a torta -->
                     </div>
-                </div>
-                <div class="" *ngIf="menuSelected==='notifiche'">
-                    <div class="w-full h-20 bg-primary flex justify-center items-center">
-                        <h2 class=" text-white text-4xl font-bold">
-                            NOTIFICHE
-                        </h2>
-                    </div>
-                    <div class="w-full h-6 bg-secondary"></div>
-
                 </div>
                 <div class="" *ngIf="menuSelected==='amici'">
                     <div class="w-full h-20 bg-primary flex justify-center items-center">
